Rewrite with Java 17